<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_slide2"
    tools:ignore="SpUsage">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash"
            android:layout_width="@dimen/paddingImage"
            android:layout_height="@dimen/paddingImage"
            android:contentDescription="@string/cDescription"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:paddingTop="@dimen/padding10"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/padding32" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/app_description"
            android:textColor="@color/white"
            android:textSize="@dimen/font_eighteen" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="middle"
        android:fontFamily="@font/roboto_regular"
        android:gravity="center"
        android:padding="@dimen/padding10"
        android:singleLine="true"
        android:text="@string/app_company_name"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="@dimen/font_fourteen" />

</RelativeLayout>