<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/padding10"
    app:cardElevation="@dimen/padding10"
    tools:ignore="SpUsage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding20"
            android:paddingTop="@dimen/padding10"
            android:paddingRight="@dimen/padding20">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="@dimen/padding5"
                android:layout_marginBottom="@dimen/padding10"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/strSelectGender"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/font_twenty_two"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioGroup
                    android:id="@+id/rdoGroupGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rdoMale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="start|center_vertical"
                        android:padding="@dimen/padding12"
                        android:text="@string/strMale"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/font_eighteen" />

                    <RadioButton
                        android:id="@+id/rdoFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="start|center_vertical"
                        android:padding="@dimen/padding12"
                        android:text="@string/strFemale"
                        android:textAlignment="viewStart"
                        android:textSize="@dimen/font_eighteen" />
                </RadioGroup>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding10"
            android:paddingRight="@dimen/padding10">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancel"
                style="@style/DialogCancelButton"
                android:text="@string/strCancel" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDone"
                style="@style/DialogDoneButton"
                android:text="@string/strDone" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>