<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding10">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cDescription"
            android:padding="@dimen/padding15"
            app:srcCompat="@drawable/ic_arrow_back"
            app:tint="@color/colorAccent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieNoChat"
            android:layout_width="match_parent"
            android:layout_height="@dimen/paddingImgPath"
            android:adjustViewBounds="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/ic_password" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/strForgetPassword"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/font_thirteen"
            android:textStyle="normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding10"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/strForgetMsg"
            android:textColor="@color/grey_600"
            android:textSize="@dimen/font_twelve" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/padding7"
            android:background="@color/grey_100" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding10">

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:gravity="start"
                android:hint="@string/strEmail"
                android:paddingBottom="@dimen/padding18"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textAlignment="viewStart"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.bytesbee.firebase.chat.activities.views.MaterialRippleLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:mrl_rippleColor="@color/white"
            app:mrl_rippleOverlay="true"
            app:mrl_rippleRoundedCorners="@dimen/padding10">

            <Button
                android:id="@+id/btnSend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/padding20"
                android:background="@drawable/rounded"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:paddingTop="@dimen/padding10"
                android:paddingBottom="@dimen/padding10"
                android:text="@string/strSubmit"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textStyle="normal" />

        </com.bytesbee.firebase.chat.activities.views.MaterialRippleLayout>


        <!--        </androidx.cardview.widget.CardView>-->

    </LinearLayout>

</ScrollView>